aoc25: static factory method to construct CellGrid from Strings